syntax = "proto3";

import "events/core.proto";

package events;

option go_package = "events";

message ExampleEvent {
    Core core = 1;
    string first_name = 2;
    string last_name = 3;
}
